[package]
name = "glyphydog"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]

[dependencies]
harfbuzz-sys = "0.2"
freetype = { git = "https://github.com/Osspial/rust-freetype" }
libc = "0.2"
bitflags = "1.0"
lazy_static = "0.2"
stable_deref_trait = "1.0"
typed-arena = "1.3"
cgmath-geometry = {git = "https://github.com/Osspial/cgmath-geometry"}
derive-error = "0.0.4"

[dev-dependencies]
png = "0.11"
