[package]
name = "font-kit-harfbuzz"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2018"

[dependencies]
harfbuzz-sys = "0.2"
libc = "0.2"
bitflags = "1.0"
lazy_static = "0.2"
derive-error = "0.0.4"
euclid = "0.20"
font-kit = "0.4"
freetype = "0.4"

[dev-dependencies]
png = "0.11"
